# IntegerMultiplication

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
integer_multiplication/: __init__.py
integer_multiplication/algorithm/: __init__.py  grade_school.py  utils.py
integer_multiplication/algorithm/grade_school/: README.md  __init__.py  v1.py
integer_multiplication/algorithm/karatsuba/: __init__.py  v1.py
integer_multiplication/tests/: __init__.py  test_multiplication.py  test_turing_machine.py  test_turing_machine_builder.py
integer_multiplication/turing_machine/: __init__.py  shift.py  symbol.py  tape.py  transition.py  turing_machine.py  turing_machine_builder.py
